# lunar-engine

./: .gitignore  Cargo.toml  README.md  design  goals.md
.github/workflows/: rust.yml
examples/: blahaj.rs
examples/blahaj/: camera_movement.rs  main.rs
examples/first-person/: main.rs
examples/physics/: main.rs
lunar-engine-derive/: Cargo.toml
lunar-engine-derive/src/: lib.rs
lunar-logging/: Cargo.toml
lunar-logging/src/: lib.rs  tests.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs
src/: event_loop.rs  grimoire.rs  helpers.rs  input.rs  internal.rs  lib.rs  logging.rs  main.rs  structures.rs  test_utils.rs  windowing.rs  wrappers.rs
src/abstractions/: mod.rs  model.rs  transfomation.rs
src/abstractions/material/: mod.rs  texture_unlit.rs
src/asset_managment/: mod.rs  tests.rs
src/assets/: heleprs.rs  material.rs  materials.rs  mesh.rs  mod.rs  tests.rs  texture.rs
src/assets/materials/: color_lit.rs  color_unlit.rs  helpers.rs  lit.rs  mod.rs  texture_unlit.rs  unlit.rs
src/assets/mesh/: mesh_generator.rs  mod.rs
src/components/: camera.rs  fps.rs  mesh.rs  mod.rs  tests.rs  transform.rs
src/components/light/: mod.rs
src/components/physics/: colliders.rs  mod.rs
src/ecs/: component.rs  entity.rs  mod.rs  tests.rs
src/ecs/components/: transform.rs
src/import/: bmp.rs  mod.rs  obj.rs
src/lunar-lib/: grimoire.rs  helpers.rs  lib.rs  test_utils.rs  windowing.rs
src/lunar-lib/abstractions/: model.rs
src/lunar-lib/abstractions/material/: texture_unlit.rs
src/lunar-lib/asset_managment/: mod.rs
src/lunar-lib/assets/: materials.rs  mod.rs  tests.rs
src/lunar-lib/components/: camera.rs  mesh.rs  mod.rs  tests.rs  transform.rs
src/lunar-lib/ecs/: component.rs  entity.rs  mod.rs  tests.rs  world.rs
src/lunar-lib/ecs/components/: mesh.rs  transform.rs
src/lunar-lib/import/: bmp.rs  obj.rs
src/lunar-lib/math/: vec4.rs
src/lunar-lib/structrures/: model.rs
src/lunar-lib/system/: rendering.rs
src/lunar-lib/system/rendering/: extensions.rs
src/math/: complex_shit.rs  lib.rs  mat4x4.rs  mod.rs  quaternion.rs  tests.rs  traits.rs  vec2.rs  vec3.rs  vec4.rs
src/math/mat4x4/: mod.rs
src/math/vec2/: mod.rs
src/math/vec3/: mod.rs
src/math/vec4/: mod.rs
src/physics/: mod.rs  tests.rs
src/renderer_lib/: helpers.rs  lib.rs
src/renderer_lib/ecs/: component.rs  entity.rs  world.rs
src/renderer_lib/ecs/components/: transform.rs
src/renderer_lib/import/: bmp.rs  mod.rs  obj.rs
src/renderer_lib/math/: complex_shit.rs  mat4x4.rs  mod.rs  traits.rs  vec2.rs  vec3.rs  vec4.rs
src/renderer_lib/structrures/: image.rs  mod.rs  model.rs
src/rendering/: extensions.rs  mod.rs
src/rendering/extensions/: frustum_culling.rs  mod.rs  screenshot.rs
src/rendering/extensions/colliders/: collider.wgsl  mod.rs
src/rendering/extensions/debug/: debug_fragment.wgsl  debug_vertex.wgsl  mod.rs
src/rendering/extensions/debug/collider/: mod.rs
src/shaders/: color.wgsl  color_lit.wgsl  color_unlit.wgsl  lit.wgsl  texture_unlit.wgsl  unlit.wgsl  vertex.wgsl
src/system/rendering/: extensions.rs  mod.rs
src/utils/: clipboard.rs  mod.rs
swizzle-gen/: Cargo.toml
swizzle-gen/src/: lib.rs
