[package]
name = "lunar-engine"
version = "0.0.1"
edition = "2021"

[lib]
name="lunar_engine"
path="./src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
webgl = ["wgpu/webgl"]

[dependencies]
proc_macros = {path = "./proc_macros", version="0.1.0"}
bytemuck = { version = "1.14.0", features = ["derive"] }
chrono = "0.4.31"
env_logger = "0.10.0"
futures = "0.3.30"
image = "0.24.7"
lock_api = "0.4.11"
log = "0.4.20"
parking_lot = "0.12.1"
rand = "0.8.5"
vec_key_value_pair = "0.1.0"
wgpu = { version = "0.18.0", default-featues = false}
winit = { version = "0.29.0", features = ["rwh_05"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
send_wrapper = "0.6.0"

[workspace]

members = [
  "proc_macros",
]
