[package]
name = "lunar-engine"
version = "0.0.1"
edition = "2024"

[lib]
name="lunar_engine"
path="./src/lib.rs"

[features]
default = ["physics"]
webgl = ["wgpu/webgl", "wasm"]
gles = ["wgpu/gles"]
tracy = ["tracy-client/default"]
physics = ["dep:rapier3d", "dep:nalgebra"]

# Needed for wasm builds
wasm = ["wgpu/fragile-send-sync-non-atomic-wasm"]

[dependencies]
lunar-engine-derive= {path = "./lunar-engine-derive", version="0.1.0"}
swizzle-gen= {path = "./swizzle-gen", version="0.1.0"}
bytemuck = { version = "1.14.0", features = ["derive"] }
chrono = "0.4.31"
futures = "0.3.30"
lock_api = "0.4.11"
log = "0.4.20"
parking_lot = "0.12.1"
rand = "0.8.5"
vec_key_value_pair = "0.2.0"
wgpu = { version = "26", default-features = false, features =["vulkan", "wgsl"]}
winit = "0.30.1"
lunar-logger= "0.2.0"
lunar-png = "0.1.2"
tracy-client={version = "0.18.0", default-features=false}
wgpu_shader_checker = "0.2.0"
rapier3d = {version = "0.29.0", optional = true, features = ["simd-stable"]}
nalgebra = {version = "0.34.1", optional = true}


[target.'cfg(target_arch="wasm32")'.dependencies]
getrandom = {version = "0.2.15", features = ["js"]}
web-sys = "0.3.64"
wasm-bindgen = "0.2.92"


[dev-dependencies]
assert_approx_eq = "1.1.0"

[workspace]

members = [
  "lunar-engine-derive",
  "swizzle-gen"
]
